fix: 调整 z-index

--- a/src/styles/vant.less
+++ b/src/styles/vant.less
@@ -32,3 +32,11 @@
 .van-nav-bar__title {
 	color: var(--bg-color-1);
 }
+
+.van-overlay {
+	z-index: 2024 !important;
+}
+
+.van-popup {
+	z-index: 2025 !important;
+}
